check out module

--- a/TrendInAutomation/src/test/java/com/trendin/pages/CheckOutPage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/CheckOutPage.properties
@@ -68,6 +68,19 @@ mobNumErrMsgXpath=//div[@id='divGuestShippingPersonalDetails']//input[@id='sleGu
 #########################TC51###################
 clearFormBtnXpath=//a[@id='aGuestCheckoutClearForm']
 
+#########################TC64###################
+shippingAddressHeaderXpath=//div[@class='address_view_block']/h2
+#########################TC65###################
+shipNewAddressCheckBoxXpath=//input[@id='chkCustomerNewShippingAddress']
+yourShippingAddressHeaderXpath=//div[@id='divCustomerShippingAddrPostcode']/h3
+#########################TC66###################
+previouslyShippedAddressTextXpath=//div[@class='address_box_block']/h4
+#########################TC67###################
+shipingAddressEditLinkXpath=//a[@class='pull-right edit editaddress']/i
+editAdressHeaderXpath=//h4[@class='title alias-name']
+#########################TC69###################
+backBtnXpath=//a[@href='https://www.trendin.com/checkoutsummary?step=1']
+
 ############# Manasa ###################################
 giftWrapCheckBoxXpath=//label[@class='css-label']//i
 giftWrapHeaderXpath=//h4[@id='myModalLabel']
@@ -79,7 +92,13 @@ checkBoxXpath=//input[@id='chkGiftWrap']
 closeButtonInGiftWrapPageXpath=//div[@id='divGiftWrapPopUp']//button[@class='close']
 editButtonXpathInCheckOutPage=//a[@id='aEditGiftWrapMessage']
 addMoreProductsXpath=//a[contains(.,'Add more Products')]
-
+########### 30-9-2015  Manasa#############################
+contactUsXpath=//span[contains(.,'Contact Us')]
+placeOrderButtonXpath=//input[@value='Place Order']
+emailIdTextFieldXpath=//input[@id='sleCustomerEmailID']
+errorEmailIdMessageXpath=//span[@id='spnEmailError']
+continueButtonXpath=//input[@id='btnCheckCustomerExists']
+guestShippingPinCodeXpath=//input[@id='sleGuestShippingPostcode']
 
 
 
