updated check out and category module

--- a/TrendInAutomation/src/test/java/com/trendin/pages/CheckOutPage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/CheckOutPage.properties
@@ -80,7 +80,17 @@ shipingAddressEditLinkXpath=//a[@class='pull-right edit editaddress']/i
 editAdressHeaderXpath=//h4[@class='title alias-name']
 #########################TC69###################
 backBtnXpath=//a[@href='https://www.trendin.com/checkoutsummary?step=1']
-
+#########################TC70###################
+noOfItemsLinkXpath=//a[@class='chkout_modal']
+cartSummaryHeaderXpath=//h4[.='CART SUMMARY']
+#########################TC71###################
+continueBtnInCartSummaryPageXpath=//input[@class='btn btn-primary orange_btn pull-right']
+#########################TC72###################
+cancelIconInCartSummaryPageXpath=//button[@class='close']/span
+#########################TC73###################
+paymentPageHeaderXpath=//h2[.='SECURE PAYMENT OPTIONS']
+#########################TC73###################
+cashOnDeliveryOptionXpath=//input[@class='payment']/span
 ############# Manasa ###################################
 giftWrapCheckBoxXpath=//label[@class='css-label']//i
 giftWrapHeaderXpath=//h4[@id='myModalLabel']
