--- a/TrendInAutomation/src/test/java/com/trendin/pages/ChangePasswordPage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/ChangePasswordPage.properties
@@ -3,16 +3,18 @@ logoutClickCss=.tr.tr-caret-down
 myAccountxpath=//div[@class='header_right_nav clearfix']/ul//li/ul//li/a[contains(.,'My Account')]
 changePasswordButtonXpath=//div/ul//a[contains(.,'CHANGE PASSWORD')]
 changePasswordEmailCss=.col-sm-8>strong
-changePasswordEmailLabelCss=.col-sm-4.text-right
+changePasswordEmailLabelXpath=//div[.='E-mail Address:']
 oldPasswordCss=#oldPwd
 newPasswordCss=#newPwd
 confirmPasswordCss=#confirmPwd
 changePasswordSubmitCss=.btn.pull-left.orange_btn.color_white
-
-
+changePasswordLabelsXpath=//label[contains(.,'{labelName}')]/span[.='*']//..//..//div//input
+changePasswordSuccessLabelXpath=//div[@class='alertflash alert alert-success' and contains(.,'Password Successfully Changed !!')]
+closePasswordSuccessMessXpath=//a[@class='close']
 ############
 loginIconXpath=//div/ul/li[@class='login_wrap dropdown']/a
-submitButtonXpath=//button[contains(.,'Submit')]
+submitButtonXpath=//button[text()='Submit']
+changePasswordH1LabelXpath=//h1[@class='title' and .='Change Password']
 
 ############
 oldPasswordTextFieldXpath=//input[@id='oldPwd']
@@ -24,3 +26,5 @@ confirmNewPasswordMessageXpath=//input[@id='confirmPwd']//..//small[@data-fv-val
 confirmNewPasswordErrorMessageXpath=//input[@id='confirmPwd']//..//small[@data-fv-validator='identical']
 newPasswordMessageXpath=//input[@id='newPwd']//..//small[@data-fv-validator='stringLength']
 oldPasswordAlertErrorMessageXpath=//div[@class='alertflash alert alert-danger']
+errorMessagesXpath=//small[.='{errorMessage}']
+oldPassMismatchErrorMessXpath=//div[@class='alertflash alert alert-danger' and contains(.,'{errorMessage}')]
