--- a/TrendInAutomation/src/test/java/com/trendin/pages/CheckOutPage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/CheckOutPage.properties
@@ -86,11 +86,11 @@ cartSummaryHeaderXpath=//h4[.='CART SUMMARY']
 #########################TC71###################
 continueBtnInCartSummaryPageXpath=//input[@class='btn btn-primary orange_btn pull-right']
 #########################TC72###################
-cancelIconInCartSummaryPageXpath=//button[@class='close']/span
+cancelIconInCartSummaryPageXpath=//div[@id='chkoutItemData']//div//div[@class='modal-header']/button
 #########################TC73###################
 paymentPageHeaderXpath=//h2[.='SECURE PAYMENT OPTIONS']
 #########################TC73###################
-cashOnDeliveryOptionXpath=//input[@class='payment']/span
+cashOnDeliveryOptionXpath=//li[@id='liCODBlock']/div[@class='payment_type_row']/label/span
 ############# Manasa ###################################
 giftWrapCheckBoxXpath=//label[@class='css-label']//i
 giftWrapHeaderXpath=//h4[@id='myModalLabel']
