--- a/TrendInAutomation/src/test/java/com/trendin/pages/ContactUsPage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/ContactUsPage.properties
@@ -4,23 +4,28 @@ contactUsIconXpath = //a[@title='Contact Us']
 headerElementsXpath=//h4[.='{replace}']
 contactUsHeaderXpath=//h3[.='Contact us ']
 beCureToCheckXpath=//h4[.='Be sure to check']
-
+allRelativeContactUsLinksXpath=//h4[.='{replaceText}']
 checkDeliveryTimeXpath = //h4[.='Check Delivery time & COD availability']
 emailUsXpath = //h4[.='Email us']
 currentPromotionsXpath=//h4[.='Current Promotions']
 callUsXpath=//h4[.='Call us']
 footerContactUsXpath=//a[.='Contact Us']
-
+allContactUsLinksXpath=//div[@class='clearfix']//h4
+homeBreadCrumbLink=//div[@class='breadcrumb']/a[.='Home']
+custSupportBreadCrumb=//div[@class='breadcrumb']/span[.='Customer Support']
 ######## clickOnFaqs ############
 faqsLinkXpath=//div[@class='clearfix']//a[.='FAQs']
-faqsHeaderXpath=//h3[@class='title']
+faqsHeaderXpath=//h3[@class='title' and .='Frequently Asked Questions']
+faqBreadCrumb=//div[@class='breadcrumb']/span[.='FAQs']
+tAndCBreadCrumbXpath=//div[@class='breadcrumb']/span[.='T & C']
+
 faqHeaderElementsXpath=//h3[contains(.,'{replace}')]
 promotionsAndVoucherTabXpath=//h3[contains(.,'Promotions & Vouchers')]
 shippingAndDeliveryTabXpath = //h3[contains(.,'Shipping & Delivery')]
 returnsRefundsTabXpath = //h3[contains(.,'Returns & Refunds')]
-
-faqspromotionsAndVoucherTabXpath = //div[@id='payment']//div/h3
-faqsquestionsXpath = //div[@id='payment']//div[{i}]/h3
+promoAndVouchersTabAllFAQsXpath=//div[@id='payment']//div/h3
+promoAndVouchersTabFAQsCollapsedXpath=//div[@id='payment']//div/h3//i[@class='tr tr-angle-down']
+promoAndVouchersTabFAQsXpath=//div[@id='payment']//div[{i}]/h3
 
 
 allreturnXpath = //div[@id='return']//div/h3
@@ -32,6 +37,9 @@ answersXpath = //div[@id='payment']//div[{i}]/div
 ############ verifyPinCodeField ######
 pincodeTextXpath=//input[@id='postcode']
 tickMarkForPinCodeValidationXpath=//input[@id='postcode']/../i
+wrongTickMarkForPINCodeXpath=//input[@id='postcode']/../i
+[@class='form-control-feedback fv-icon-no-label fa fa-close']
+correctTickMarkForPINCodeXpath=//input[@id='postcode']/../i[@class='form-control-feedback fv-icon-no-label fa fa-check']
 checkButtonXpath=//input[@value='Check']
 successCheckXpath=//div[@id='pin_delivery_status']
 
@@ -39,7 +47,7 @@ pinCodeLengthErrorXpath = //div[@id='messages']/small[@data-fv-validator='string
 pincodeEmptyErrorXpath = //div[@id='messages']/small[@data-fv-validator='notEmpty']
 integerPincodeErrorXpath = //div[@id='messages']/small[@data-fv-validator='integer']
 
-
+tinyContactUsXpath=//a[@class='contact_top']/i[@class='tr tr-phone']
 emailLinkXpath=//a[@class='ie_before_unload']
 
 callUsTextXpath=//div[@class='clearfix']//p[@class='orange_txt']
