--- a/TrendInAutomation/src/test/java/com/trendin/pages/HomePage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/HomePage.properties
@@ -1,9 +1,9 @@
-contactUsXpath=//a[contains(.,'Contact Us')]
+contactUsXpath=//a[@title='Contact Us']
 contactUsTextXpath=//div[@class='container main_container']//h3
-tinyContactUsXpath=//a[@class='contact_top']/i
-allRelativeContactUsLinksXpath=//div[@class='col-lg-7 col-md-7 col-sm-7 col-xs-7']//h4[contains(.,'{replaceText}')]
-allContactUsLinksXpath=//div[@class='col-lg-7 col-md-7 col-sm-7 col-xs-7']//h4
-
+tinyContactUsXpath=//a[@class='contact_top']/i[@class='tr tr-phone']
+allRelativeContactUsLinksXpath=//h4[.='{replaceText}']
+allContactUsLinksXpath=//div[@class='clearfix']//h4
+contactUsHeaderXpath=//h3[.='Contact us ']
 ########## ClickOnLogin/register ###############
 loginregisterLinkXpath=//div/ul/li[@class='login_wrap dropdown']/a
 verifyLoginPageXpath=//h4[.='Login/Register']
