--- a/TrendInAutomation/src/test/java/com/trendin/pages/LoginPage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/LoginPage.properties
@@ -1,7 +1,7 @@
 ##### loginPageIcon
 loginIconXpath=//div/ul/li[@class='login_wrap dropdown']/a
 loginTextXpath=//h4[@id='myModalLabel' and contains(.,'Login/Register')]
-
+loggedUserStatusIconXpath=//a[@class='top_header_user_account']
 loginSignUpXpath=//div[@class='col-lg-6 col-md-6 col-sm-6 col-xs-6']/h3[contains(.,'Sign Up')]
 yourNameLabelXpath=//form[@id='frmRegistration']//label[contains(.,'Your name')]
 emailLabelXpath=//form[@id='frmRegistration']//label[contains(.,'Email Address')]
@@ -91,6 +91,7 @@ logoutButtonXpath=//div/ul//a[contains(.,'LOGOUT')]
 returnsXpath=//div[@class='header_right_nav clearfix']/ul//li/ul//li/a[contains(.,'Returns')]
 myOrdersXpath=//div[@class='header_right_nav clearfix']/ul//li/ul//li/a[contains(.,'My Orders')]
 myAccountxpath=//div[@class='header_right_nav clearfix']/ul//li/ul//li/a[contains(.,'My Account')]
+accountAndInfoMenuXpath=//a[@class='active']/span[.='ACCOUNT & INFORMATION']
 
 #######################Sign in with Facebook
 faceBookLoginTextXpath=//h2[@class='uiHeaderTitle']
