--- a/TrendInAutomation/src/test/java/com/trendin/pages/CategoryModulePage.properties
+++ b/TrendInAutomation/src/test/java/com/trendin/pages/CategoryModulePage.properties
@@ -1,16 +1,30 @@
 #######################New Arrivals
-headerLinksXpath=//div[@id='bs-example-navbar-collapse-1']//a[contains(.,'{replaceHeaderLinkName}')]
-
+headerLinksXpath=//ul[@class='nav navbar-nav main_nav']//a[.='{replaceHeaderLinkName}']
+trendInMainLogoXpath=//img[@title='TRENDIN']
+allMenuMegaBarXpath=//div[@class='header_nav']//ul[@class='nav navbar-nav main_nav']/li/a
+itemsXpath=//div[@class='category_landing_title color_white']/p
 ###########################veriyMenCategory
 allCategoryXpath=//div[@class="category_landing_title color_white"]/p
 categoryTypesXpath=//div[@class="category_landing_title color_white"]/p[contains(.,'{ReplaceCategory}')]
-
+sortOrderLabelXpath=//label[.='Sort:']
 
 ############################TC_11####################################
-securePaymentIconXpath=//a[.='{replace}']/..//span[.='Secure Payment']
+businessIconXpath=//a[.='{categoryName}']/..//span[normalize-space(text())='{optionName}']
+
 securePaymentHeaderXpath=//div[@class='why_trendin_wrap']//div[@id='4']//h3
+cardsInfoImagesXpath=//div[@class='cards_img']//img[{count}]
 ############################TC_12####################################
+homeBreadCrumbTextXpath=//a[@title='return to Home' and .='Home']
+alterationBreadCrumbTextXpath=//span[@class='cms_breadcrumb' and .='Alteration']
+h3LabelInAlterationPageXpath=//h3[.='Get FREE TROUSER LENGTH ALTERATIONS ON TRENDIN.COM']
+findYourNearestStoreTextXpath=//h4[normalize-space(text())='Find your Nearest Store:']
 freeAlterationIconXpath=//a[.='{replace}']/..//span[.='Free Alterations ']
 selectStateDropDownXpath=//form[@id='form_store']//../div[@class='form-group']/select[@id='state']
 selectCityDropDownXpath=//select[@id='city']
+aboutUsFooterLinkXpath=//div[@class='footer_wrap']//a[.='ABOUT US']
 locateStoreBtnXpath=//form[@id='form_store']/div//../div/button
+storesAddressXpath=//div[@class='address_block']
+storesFoundLabelXpath=//h5[.='We found the following stores near you:']
+#####################clickOnProductCategory
+allProductCategoryXpath=//div[@id='product_rows']/div//div/a/img
+productCategoryXpath=//div[@id='product_rows']/div[{i}]//div[@class='product_wrap']/div[@class='product_wrap_hover']//img[contains(@id,'product')]//..
